Fix failing tests for SaintController and FeedbackService by: - Adding missing thenReturn() stubs - Correcting argument matchers (use eq() with raw values) - Ensuring proper setup for MockMvc tests